syntax = "proto3";
package nbcontract.v1;

message HTTPProxyConfig {
  // HTTPProxy represents the proxy endpoint/URL using HTTP, that the traffic should go through for making HTTP connections outside the cluster
  string http_proxy = 1;

  // HTTPSProxy represents the proxy endpoint/URL using HTTPS, that the traffic should go through for making HTTPS connections outside the cluster
  string https_proxy = 2;

  // NoProxy represents a list of entries including IPs, domains, or other network CIDRs that should not be accessed through the proxy
  repeated string no_proxy_entries = 3;

  // TrustedCA repesents alternative CA certificate content
  string proxy_trusted_ca = 4;
}