syntax = "proto3";
package aksnodeconfig.v1;

message TLSBootstrappingConfig {
  // Enable secure TLS bootstrapping for the node.
  optional bool enable_secure_tls_bootstrapping = 1;

  // Only required until Secure TLS bootstrapping in place. Would use kubelet identity after that.
  string tls_bootstrapping_token = 2;

  // Only used when secure TLS bootstrapping is enabled. This is the appserver appid that the node will use to bootstrap.
  string custom_secure_tls_bootstrapping_appserver_appid = 3;
}
